# var_es_dgm

./: .gitignore  pyproject.toml
experiments/multivariate/: multivariate_1%_tuned.ipynb  multivariate_5%_tuned.ipynb  multivariate_default.ipynb
experiments/univariate/: univariate_1%_tuned.ipynb  univariate_5%_tuned.ipynb  univariate_default.ipynb
var_es_dgm/utils/: __init__.py  pick_device.py
visualisations/: plot_proposed_approach.ipynb
